--- a/_posts/2019-02-25-Chaos.md
+++ b/_posts/2019-02-25-Chaos.md
@@ -6,6 +6,9 @@ tags: [HackTheBox, HTB, Linux, ]
 header:
     teaser: "/assets/images/htb/chaos/chaos.png"
 ---
+Chaos is a medium-difficulty Linux machine that has a lot going on. The route to `user.txt` is indeed a long one, as the path winds from finding some insecurely stored email account credentials to reversing a Python encryption program to abusing a web application that creates PDF documents. There are many twists and turns along the way. The good news is that once user-level access to the system has been gained, the majority of the work is done. A saved browser credential paired with a weak (and heavily overused!) master password will lead to accessing the system as `root`. The moral of this story may be that your stored credentials are only as strong as the password you're using to protect them. And for the love of Linux, don't reuse passwords.
+>-MN
+
 ![chaos_info.png](/assets/images/htb/chaos/chaos_info.png)
 
 *Note: I completed this challenge on January 12th, 2019, however I'm just now writing it up in December 2019. As such, some of the details are sparse.*
