--- a/_posts/2019-02-25-Chaos.md
+++ b/_posts/2019-02-25-Chaos.md
@@ -500,7 +500,7 @@ Browsing to the `https://chaos.htb:10000` URL results in the following:
 
 ![master_pass.png](/assets/images/htb/chaos/master_pass.png)
 
-... If you had to guess the master password, would you guess `jiujitsu`?ß
+... If you had to guess the master password, would you guess `jiujitsu`?
 
 Once logged in, there are a variety of ways to access the system as the `root` user. The simplest way involves navigating to the "System" tab on the left side bar, clicking on it, and then selecting the "Change Passwords" option. From here, the password for any user can be changed.
 
