--- a/_posts/2019-01-12-Carrier.md
+++ b/_posts/2019-01-12-Carrier.md
@@ -2,7 +2,7 @@
 title: "HTB Write-up: Carrier"
 date: 2019-01-12
 category: [HackTheBox]
-tags: [HackTheBox, HTB, Linux, ]
+tags: [HackTheBox, HTB, Linux, SNMP, Burp, burpsuite, Quagga, BGP, vtysh, BGP hijacking, MitM, FTP, wireshark]
 header:
     teaser: "/assets/images/htb/carrier/carrier.png"
 ---
