--- a/_posts/2018-12-22-Curling.md
+++ b/_posts/2018-12-22-Curling.md
@@ -29,7 +29,7 @@ Discovered open port 80/tcp on 10.10.10.150
 This scan revealed that TCP ports 22(SSH) and and 80(HTTP) were open and listening for connections. Taking these open ports, the `nmap` tool was then used to further enumerate the open ports.
 
 ```
-root@kali:~/workspace/hackthebox/Curling# nmap -sC -sV -oA scans/discovered-tcp 10.10.10.150
+root@kali:~/workspace/hackthebox/Curling# nmap -p 22,80 -sC -sV -oA scans/discovered-tcp 10.10.10.150
 Starting Nmap 7.80 ( https://nmap.org ) at 2019-12-22 08:34 MST
 Nmap scan report for 10.10.10.150
 Host is up (0.057s latency).
