--- a/_posts/2019-01-05-Ypuffy.md
+++ b/_posts/2019-01-05-Ypuffy.md
@@ -6,7 +6,7 @@ tags: [HackTheBox, HTB, OpenBSD, LDAP, smbclient, NT hash, putty-tools, doas, CA
 header:
     teaser: "/assets/images/htb/ypuffy/ypuffy.png"
 ---
-Ypuffy is a medium difficulty OpenBSD machine. The OpenBSD operating system provides a bit of a twist compared to the usual Linux and Windows challenges. The path to user is relatively simple. Careful enumeration, a bit of research on [YP LDAP](http://puffysecurity.com/wiki/ypldap.html),  and the knowledge within the `man` pages of `smbclient` will get you there. Elevating priveleges to `root` is a bit trickier, and requires putting a few pieces of information together that may not be so obviously related. With the right bit of [reference material](https://engineering.fb.com/production-engineering/scalable-and-secure-access-with-ssh/) provided by our Big Brother, Facebook, the path to `root` becomes clear.
+Ypuffy is a medium difficulty OpenBSD machine. The OpenBSD operating system provides a bit of a twist compared to the usual Linux and Windows challenges. The path to user is relatively simple. Careful enumeration, a bit of research on [YP LDAP](http://puffysecurity.com/wiki/ypldap.html),  and the knowledge within the `man` pages of `smbclient` will get you there. Elevating priveleges to `root` is a bit trickier, and requires putting a few pieces of information together that may not be so obviously related. With the right bit of [reference material](https://engineering.fb.com/production-engineering/scalable-and-secure-access-with-ssh/) provided by our Big Brother Facebook, the path to `root` becomes clear.
 
 ![ypuffy_info.png](/assets/images/htb/ypuffy/ypuffy_info.png)
 
