--- a/_posts/2020-01-04-Craft.md
+++ b/_posts/2020-01-04-Craft.md
@@ -2,7 +2,7 @@
 title: "HTB Write-up: Craft"
 date: 2020-01-04
 category: [HackTheBox]
-tags: [HackTheBox, HTB]
+tags: [HackTheBox, HTB, API, curl, Gogs, eval, injection, Python, wget, SQL, Vault, OTP, HashiCorp]
 header:
     teaser: "/assets/images/htb/craft/craft.png"
 ---
