--- a/_posts/2020-01-04-Craft.md
+++ b/_posts/2020-01-04-Craft.md
@@ -2,10 +2,12 @@
 title: "HTB Write-up: Craft"
 date: 2020-01-04
 category: [HackTheBox]
-tags: [HackTheBox, HTB, API, curl, Gogs, eval, injection, Python, wget, SQL, Vault, OTP, HashiCorp]
+tags: [HackTheBox, HTB, Linux, API, curl, Gogs, eval, injection, Python, wget, SQL, Vault, OTP, HashiCorp]
 header:
     teaser: "/assets/images/htb/craft/craft.png"
 ---
+Craft is a medium-difficulty Linux system. To reach the `user.txt` flag, a variety of small hurdles must be overcome. The majority of this process involves getting to the bottom of what's up with the beer-themed Craft API. It seems that one of the developers had a few too many craft IPAs before pushing some sloppy changes to the Craft API Gogs repository. The steps to `user.txt` all feel very "real" and make for a great exprience. The route to the `root.txt` flag is fairly straight forward and even more obvious. Reading the relevant documentation will get you there. 
+
 ![craft_info](/assets/images/htb/craft/craft_info.png)
 
 ## User
