--- a/_posts/2020-01-27-h1_Micro-CMS_v1.md
+++ b/_posts/2020-01-27-h1_Micro-CMS_v1.md
@@ -67,7 +67,7 @@ Flag 2 is displayed in the alert pop up upon visiting the home page.
 ^FLAG^2068a9d8<redacted>$FLAG$
 ```
 
-*** I know you can see the full flag in the GIF, but whatever... ***
+*I know you can see the full flag in the GIF, but whatever...*
 
 ## Flag 3
 Flag 3 is obtained through another cross-site scripting vulnerability. This time, the vulnerability is a bit more difficult to find. Flag 3 once again exemplifies the importance of considering the wide variety of ways in which information (and code) can be sent from a browser (client) to a server. 
