--- a/_posts/2020-01-27-h1_Micro-CMS_v1.md
+++ b/_posts/2020-01-27-h1_Micro-CMS_v1.md
@@ -1,5 +1,5 @@
 ---
-title: "HackerOne Write-up: Micro-CMS v1"
+title: "HackerOne CTF Write-up: Micro-CMS v1"
 date: 2020-01-30
 category: [HackerOne]
 tags: [HackerOne, Web Application, insecure indexing, SQL injection, XSS, onclick]
