--- a/_posts/2020-01-27-h1_Micro-CMS_v1.md
+++ b/_posts/2020-01-27-h1_Micro-CMS_v1.md
@@ -5,7 +5,7 @@ category: [HackerOne]
 tags: [HackerOne, Web Application, insecure indexing, SQL injection, XSS, onclick]
 header:
 ---
-The challenge titled "Micro-CMS v1" is rated as easy difficult and contains four flags. The challenge provides an introduction to an insecure indexing vulnerability, an (extremely) basic example of SQL injection, and a demonstration of two cross-site scripting vulnerabilities. This challenge helps to drive the point home that submitted forms are not the only user-modifiable fields that can pass data to a server.
+The challenge titled "Micro-CMS v1" is rated as easy difficulty and contains four flags. The challenge provides an introduction to an insecure indexing vulnerability, an (extremely) basic example of SQL injection, and a demonstration of two cross-site scripting vulnerabilities. This challenge helps to drive the point home that submitted forms are not the only user-modifiable fields that can pass data to a server.
 
 ## Home Page
 At the start of the challenge, the home page contains three clicable links. The "Testing" link and the "Markdown Test" link direct the user to `/page/1` and `/page/2`, respectively. The "Create a new page" link directs the user to `/page/create`. The home page is shown in the image below.
