--- a/_posts/2020-01-27-h1_Micro-CMS_v1.md
+++ b/_posts/2020-01-27-h1_Micro-CMS_v1.md
@@ -18,7 +18,11 @@ At the start of the challenge, the home page contains three clicable links. The 
 ## Flag 0
 Flag 0 is obtained through an insecure indexing vulnerability that can be discovered through the "Create a new page" functionality of the challenge home page. After following the "Create a new page" link, a new page can be created that shows up alongside the "Testing" page (located at `/page/1`) and the "Markdown Test" page (located at `/page/2`) on the home page.
 
-After the first new page has been created, the newly created page is located at `/page/7` instead of the more logical location of `/page/3`. Because of this, it can be inferred that pages 3 through 6 may already exist on the webserver, but that they are not accessible in the same manner (e.g. by following a link) as pages 1 and 2.
+After the first new page has been created, the newly created page is located at `/page/7` instead of the more logical location of `/page/3`. 
+
+![new_page](/assets/images/h1/microcmsv1/new_page.png)
+
+Because of this, it can be inferred that pages 3 through 6 may already exist on the webserver, but that they are not accessible in the same manner (e.g. by following a link) as pages 1 and 2.
 
 Manually browsing to page indices 3, 4, and 6 return "Not Found" errors while index 5 (`/page/5`) returns a "Forbidden" error. This "Forbidden" error suggests that page 5 exists, but that the user does not have permission to access the file via `/page/5`.
 
